@@ -13,6 +13,7 @@ copyright_year = 2010-2017
 -relationship = requires
 Dist::Zilla::Plugin::AutoMetaResources = 0
 Dist::Zilla::Plugin::AutoPrereqs = 0
+Dist::Zilla::Plugin::Encoding = 0
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::Tag = 0
